--- a/SnakeJS/index.html
+++ b/SnakeJS/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Umut Emre Celik | Games</title>
+    <title>Snake JS</title>
     <link rel="stylesheet" href="/snake-style.css">
 </head>
 <body>
